--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Love stories'
 - !lcc 'PR'
 - !lcsh 'Social classes -- England -- Fiction'
+- GITenberg
 title: The Squire's Daughter
 url: http://www.gutenberg.org/ebooks/36384
